--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,8 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if restaurant['rating'] > alternate['rating']"
+    "    if restaurant['rating'] > alternate['rating']:\n",
+    "        return "
    ]
   },
   {
