--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternate['rating']:\n",
-    "        return "
+    "        return restaurant\n",
+    "    elif "
    ]
   },
   {
