--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternate['rating']:\n",
     "        return restaurant\n",
-    "    elif alternate['rating'] > "
+    "    elif alternate['rating'] > restaurant['rating']:\n",
+    "        return "
    ]
   },
   {
