Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     "    if restaurant['rating'] > alternate['rating']:\n",
     "        return restaurant\n",
     "    elif alternate['rating'] > restaurant['rating']:\n",
-    "        return alternate"
+    "        return alternate\n"
    ]
   },
   {
