--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternate['rating']:\n",
-    "        return restaurant\n",
+    "        print(restaurant)\n",
     "    elif alternate['rating'] > restaurant['rating']:\n",
     "        return alternate\n",
     "    \n",
