Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
     "    if restaurant['rating'] > alternate['rating']:\n",
     "        print(restaurant)\n",
     "    elif alternate['rating'] > restaurant['rating']:\n",
-    "        return alternate\n",
+    "        print(alternate)\n",
     "    \n",
     "better_restaurant(frontier_restaurant, fork_fig)"
    ]
