Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,10 +154,10 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if restaurant['rating'] > alternate['rating']:\n",
+    "    if restaurant['rating'] > alternative['rating']:\n",
     "        print(restaurant)\n",
-    "    elif alternate['rating'] > restaurant['rating']:\n",
-    "        print(alternate)"
+    "    elif alternative['rating'] > restaurant['rating']:\n",
+    "        print(alternative)"
    ]
   },
   {
