--- a/index.ipynb
+++ b/index.ipynb
@@ -155,9 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        print(restaurant)\n",
+    "        print(restaurant['name'])\n",
     "    elif alternative['rating'] > restaurant['rating']:\n",
-    "        print(alternative)"
+    "        print(alternative[])"
    ]
   },
   {
