--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if restaurants['is_closed'] == "
+    "    if restaurants['is_closed'] == 'False'"
    ]
   },
   {
