--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    if restaurants['is_closed'] == False:\n",
-    "        return \n",
+    "        return restaurants['name']\n",
+    "    re\n",
     "        "
    ]
   },
