--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    if restaurants['is_closed'] == False:\n",
     "        return restaurants['name']\n",
-    "    re\n",
+    "    retur\n",
     "        "
    ]
   },
