Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    if restaurants['is_closed'] == False:\n",
     "        return restaurants['name']\n",
-    "    return restaurants[]\n",
+    "    return restaurants['name'] + \"is closed.\"\n",
     "        "
    ]
   },
