Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,10 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if restaurants['is_closed'] == False:\n",
-    "        return restaurants['name']\n",
-    "    return restaurants['name'] + \" is closed.\"\n",
-    "        "
+    "    for i in resta"
    ]
   },
   {
