--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for i in resta"
+    "    \n",
+    "    for i in restaurants:\n",
+    "        "
    ]
   },
   {
