--- a/index.ipynb
+++ b/index.ipynb
@@ -288,8 +288,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    \n",
+    "    open = []\n",
     "    for i in restaurants:\n",
+    "        i\n",
     "        "
    ]
   },
