--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -290,7 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for i in restaurants:\n",
-    "        if not i['is_'] == \n",
+    "        if not i['name'] == \n",
     "        "
    ]
   },
