Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    open = []\n",
     "    for i in restaurants:\n",
     "        if not i['is_closed']:\n",
-    "            \n",
+    "            open.append(i)\n",
     "        "
    ]
   },
